Expand SEO keywords with comprehensive Norwegian search terms

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Klassekart Generator - Organiser klasseromsplassering enkelt</title>
     <meta name="title" content="Klassekart Generator - Organiser klasseromsplassering enkelt" />
     <meta name="description" content="En moderne, interaktiv webapplikasjon for å organisere og administrere klasseromsplasseringer. Dra og slipp studenter, lag flere klassekart, og lagre automatisk." />
-    <meta name="keywords" content="klassekart, klasserom, plassering, skole, lærer, studentadministrasjon, dra og slipp, norsk skole, seating chart" />
+    <meta name="keywords" content="klassekart generator, lage klassekart, digitalt klassekart, klassekart verktøy, sitteplass generator klasse, sitteplass planlegger, klassekart program, klassekart online, automatisk klassekart, tilfeldig klassekart, verktøy for lærere, lærer verktøy, digitale verktøy for lærere, planlegging klasserom, organisere klasserom, undervisningsverktøy, hjelpemiddel for lærere, klasseromsplanlegger, sitteplass klasserom, organisering av elever, elevplassering, administrere klasse, klasseromsorganisering, grunnskole verktøy, videregående skole verktøy, norsk lærer verktøy, skoleverktøy" />
     <meta name="author" content="Klassekart Generator" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Norwegian" />
